# banking-offer-personalization

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/real/mbd_mini/targets/fold=0/: part-00000-44ca8b70-9d42-48f7-9dec-0a7a012af308.c000.snappy.parquet  part-00001-44ca8b70-9d42-48f7-9dec-0a7a012af308.c000.snappy.parquet  part-00002-44ca8b70-9d42-48f7-9dec-0a7a012af308.c000.snappy.parquet  part-00003-44ca8b70-9d42-48f7-9dec-0a7a012af308.c000.snappy.parquet  part-00004-44ca8b70-9d42-48f7-9dec-0a7a012af308.c000.snappy.parquet  part-00005-44ca8b70-9d42-48f7-9dec-0a7a012af308.c000.snappy.parquet  part-00006-44ca8b70-9d42-48f7-9dec-0a7a012af308.c000.snappy.parquet  part-00007-44ca8b70-9d42-48f7-9dec-0a7a012af308.c000.snappy.parquet  part-00008-44ca8b70-9d42-48f7-9dec-0a7a012af308.c000.snappy.parquet  (+78 more)
docs/: 24_thesis_final_assembled_en.md  25_thesis_final_ru.md  29_final_defense_presentation_en.md  30_final_defense_talk_track_en.md  31_final_defense_qna_en.md  32_lms_submission_checklist_ru.md  33_ai_declaration_draft_ru.md
reports/mbd_mini_validation/: mbd_mini_dataset_summary.json  mbd_mini_holdout.csv  mbd_mini_lightgcn_tuning.csv  mbd_mini_positive_product_interactions.csv  mbd_mini_products.csv  mbd_mini_sasrec_tuning.csv  mbd_mini_train_interactions.csv  mbd_mini_validation_metrics.csv  mbd_mini_validation_per_user_metrics.csv  mbd_mini_validation_report.md
scripts/: build_defense_docs.py  build_thesis_docx.py  run_mbd_mini_validation.ps1
src/data/: load_mbd_mini.py
src/models/: lightgcn_recommender.py
src/pipelines/: run_mbd_mini_validation.py
(+348 files in other folders)
