[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-offer-personalization"
version = "0.1.0"
description = "Transaction-based personalization of banking offers"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
  "torch>=2.11.0",
  "pyarrow>=23.0.0",
]
